# spectra_scribe

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
results/: experiment1_holdout_0_results.csv  experiment1_results.csv  experiment4_holdout_0_results.csv
src/: data.rs  dataset.rs  error.rs  experiment_config.rs  holdout.rs  inference.rs  lib.rs  main.rs  mcc.rs  model.rs  output.rs  training.rs
src/evaluation/: confusion.rs  metrics.rs  mod.rs
src/experiment/: config.rs  mod.rs  protocol.rs  runner.rs
src/experiment_config/: evaluation.rs  experiment_definition.rs  experiment_run.rs  feature.rs  loss.rs  mlp_model.rs  mod.rs  run.rs  runner.rs  standard.rs
src/experiment_protocol/: class_distribution.rs  evaluation.rs  experiment_definition.rs  experiment_run.rs  feature.rs  loss.rs  mlp_model.rs  mod.rs  optimizer.rs  protocol_config.rs  run.rs  runner.rs  split_strategy.rs  standard.rs
src/experiments/: experiment1.rs  experiment2.rs  experiment4.rs  experiment6.rs  mod.rs
src/holdout/: basic_holdout.rs  mod.rs  report.rs
