[package]
name = "SpectraScribe"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.21.0", features = ["fusion", "metrics", "std", "train", "tui", "vision", "wgpu", "autotune"]}
elements_rs = "0.2.7"
mascot-rs = { git = "https://github.com/LucaCappelletti94/mascot-rs" }
molecular-formulas = "0.1.10"
pollster = "0.4.0"
mass_spectrometry = { git = "https://github.com/earth-metabolome-initiative/mass-spectrometry-traits" }
rand = { version = "0.10.1", features = ["chacha"] }
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"] }
serde = "1.0.228"
csv = "1.4.0"

[lints.rust]
missing_docs = "forbid"
unused_must_use = "forbid"
unused_import_braces = "forbid"
unconditional_recursion = "forbid"
unused_macro_rules = "forbid"
deprecated = "deny"
unsafe_code = "forbid"

[lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
clone_on_copy = "forbid"
unwrap_used = "deny"
expect_used = "deny"
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"